--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>intelligentagent</groupId>
-  <artifactId>stock</artifactId>
+  <groupId>com.aron</groupId>
+  <artifactId>svenskafansscraper</artifactId>
   <name>${project.artifactId}</name>
   <version>1.0.0-SNAPSHOT</version>
   <dependencies>
   <dependency>
-  	<groupId>intelligentagent</groupId>
-  	<artifactId>rule</artifactId>
-  	<version>1.0.0-SNAPSHOT</version>
-  </dependency>
-  <dependency>
-  	<groupId>org.jsoup</groupId>
-  	<artifactId>jsoup</artifactId>
-  	<version>1.7.1</version>
+    <groupId>org.jsoup</groupId>
+    <artifactId>jsoup</artifactId>
+    <version>1.7.1</version>
   </dependency>
   </dependencies>
-
 </project>
