--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<dependency>
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
-			<version>1.7.1</version>
+			<version>1.7.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.almworks.sqlite4java</groupId>
@@ -82,8 +82,8 @@
 							<goal>assemble</goal>
 						</goals>
 						<configuration>
-							<extraJvmArguments>-Dsqlite4java.library.path=lib</extraJvmArguments>
-							<mainClass>SvenskaFans</mainClass>
+							<javaParameters>-Dsqlite4java.library.path=lib</javaParameters>
+							<mainClass>com.aron.svenskafansscraper.SvenskaFans</mainClass>
 						</configuration>
 					</execution>
 				</executions>
