--- a/pom.xml
+++ b/pom.xml
@@ -126,8 +126,24 @@
 						</lifecycleMappingMetadata>
 					</configuration>
 				</plugin>
-			</plugins>
-		</pluginManagement>
+                                <plugin>
+                                  <artifactId>maven-antrun-plugin</artifactId>
+                                  <version>1.7</version>
+                                </plugin>
+                                <plugin>
+                                  <artifactId>maven-assembly-plugin</artifactId>
+                                  <version>2.4</version>
+                                </plugin>
+                                <plugin>
+                                  <artifactId>maven-dependency-plugin</artifactId>
+                                  <version>2.7</version>
+                                </plugin>
+                                <plugin>
+                                  <artifactId>maven-release-plugin</artifactId>
+                                  <version>2.4</version>
+                                </plugin>
+                        </plugins>
+                </pluginManagement>                
 	</build>
 
 
