--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,34 @@
                                   <artifactId>maven-release-plugin</artifactId>
                                   <version>2.4</version>
                                 </plugin>
+                                <plugin>
+                                  <artifactId>maven-clean-plugin</artifactId>
+                                  <version>2.5</version>
+                                </plugin>
+                                <plugin>
+                                  <artifactId>maven-compiler-plugin</artifactId>
+                                  <version>3.0</version>
+                                </plugin>
+                                <plugin>
+                                  <artifactId>maven-deploy-plugin</artifactId>
+                                  <version>2.7</version>
+                                </plugin>
+                                <plugin>
+                                  <artifactId>maven-install-plugin</artifactId>
+                                  <version>2.4</version>
+                                </plugin>
+                                <plugin>
+                                  <artifactId>maven-jar-plugin</artifactId>
+                                  <version>2.4</version>
+                                </plugin>
+                                <plugin>
+                                  <artifactId>maven-resources-plugin</artifactId>
+                                  <version>2.6</version>
+                                </plugin>
+                                <plugin>
+                                  <artifactId>maven-site-plugin</artifactId>
+                                  <version>3.2</version>
+                                </plugin>
                         </plugins>
                 </pluginManagement>                
 	</build>
